# au4-application-root

./: .editorconfig  .gitignore  Cargo.toml  README.md  config-example.toml
frontend/: .gitignore  package-lock.json  package.json  spa-config.json  vite.config.js  webpack.config.js
frontend/public/assets/root/js/vendors/antd/5.19.3/: antd.min.js
frontend/public/js/root-config/: 1723515302981.single-spa.config.js
frontend/scripts/: update-spa-config.js
frontend/src/: activity-fn.js  root-config.js  single-spa.config.js
public/assets/root/js/vendors/lexical/0.9.0/: Lexical.es.prod.js  Lexical.es.prod.js.map  Lexical.prod.js  Lexical.prod.js.map  Lexical.umd.prod.js  Lexical.umd.prod.js.map
public/assets/root/js/vendors/react-query/3.39.3/: react-query.production.js
public/assets/root/js/vendors/react-virtualized/9.22.3/: react-virtualized.min.js
public/assets/root/js/vendors/systemjs/6.1.4/: system.bundle.min.js
public/js/: single-spa-config.js
public/js/root-config/: single-spa.config.js  single-spa.config.js.map
src/: config.rs  error.rs  main.rs  manifest.rs  run.rs  web.rs
templates/: error.html  index.html
