[package]
name = "application-root"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7", features = ["macros"] }
clap = { version = "4.4.6", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tera = { version = "1.19.1", default-features = false }
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.2"
tower = "0.4.13"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
