[package]
name = "application-root"
version = "0.1.1"
edition = "2024"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum", "serde-json"] }
askama_axum = "0.4.0"
axum = { version = "0.8.1", features = ["macros"] }
clap = { version = "4.5.30", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["from"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
